# Siaod2

./: IKBO-03-21 Khrechko Sergey Otchet 1.docx  Obrazets_otcheta.docx  ~$BO-03-21 Khrechko Sergey Otchet 1.docx  ~$актическая работа 2 (Управление файлом).docx  ~$актическая работа 3 (хеш-таблица для поиска записи в файле).docx  Практическая работа 2 (Управление файлом).docx  Практическая работа 3 (хеш-таблица для поиска записи в файле).docx  записи и подсказки
EighthTask/: IKBO-03-21 Khrechko Sergey report 8.docx  main.cpp
FifthTask/: CMakeLists.txt  IKBO-03-21 Khrechko Sergey Otchet 5.docx  bfb.txt  main.cpp  smallerBigFile.txt  smallrun.txt
FifthTask/libraries/: CMakeLists.txt  binFile.cpp  binFile.h  binarySearchTree.cpp  binarySearchTree.h  randomizedBinarySearchTree.cpp  randomizedBinarySearchTree.h
FirstTask/: first.cpp
FourthTask/: IKBO-03-21 Khrechko Sergey report 4.docx  main.cpp
SecondTask/: IKBO-03-21 Khrechko Sergey Otchet 2.docx  bankFileInitial.txt  bfb.txt  bfi.txt  bft.txt  file.txt  file_fibbonachi.txt  functions.cpp  functions2.cpp  secondTask1.cpp  secondTask2.cpp  strange.txt  strange_fibbonachi.txt  test.txt
SeventhTask/: IKBO-03-21 Khrechko Sergey report 7.docx  maVar  main.cpp  Файл под удаление для сиаода.rar  Файл под удаление для сиаода.txt
SixthTask/: IKBO-03-21 Khrechko Sergey report 6.docx  graph.cpp  test graph.txt  ~$BO-03-21 Khrechko Sergey report 6.docx
ThirdTask/: CMakeLists.txt  IKBO-03-21 Khrechko Sergey report 3.docx  bfb.txt  main.cpp  thirdTaskMain.cpp  ~$BO-03-21 Khrechko Sergey report 3.docx
(+7 files in other folders)
